- Reload doesn't (re)store Target position; - Select handles Gallery Tile effects better; - complete Target rework; - DataObjectList getRandom() rework;